# UnityMCP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
UnityPackage/: package.json
UnityPackage/Editor/: EditorThreadDispatcher.cs  UnityMCP.Editor.asmdef  UnityMCPBridge.cs  UnityMCPWindow.cs
src/unity_mcp/: __init__.py  server.py
