[project]
name = "unity-mcp"
version = "1.0.0"
description = "Unity Editor integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "UnityMCP", email = "unity-mcp@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
unity-mcp = "unity_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/MaksMykolenko/UnityMCP"
"Bug Tracker" = "https://github.com/MaksMykolenko/UnityMCP/issues"
